delete reaction user
