# internal/api/responses/article.go
@@ -6,15 +6,49 @@ import (
 )
 
 func Article(article models.Article) resources.Article {
-	var content []resources.Content
+	content := make([]resources.Content, 0)
 	if article.Content != nil {
 		for _, c := range article.Content {
-			content = append(content, resources.Content{
-				Type:    string(c.Section),
-				Content: c.Content,
-			})
+			section := resources.Content{
+				Id:   c.ID,
+				Type: string(c.Type),
+			}
+
+			if c.Media != nil {
+				section.Media = &resources.ContentMedia{
+					Url:     c.Media.URL,
+					Caption: c.Media.Caption,
+					Alt:     c.Media.Alt,
+					Width:   int32(c.Media.Width),
+					Height:  int32(c.Media.Height),
+					Source:  c.Media.Source,
+				}
+			}
+
+			if c.Text != nil {
+				text := make([]resources.ContentTextInner, 0)
+				for _, t := range c.Text {
+					if t.Text != nil {
+						marks := make([]string, 0)
+						for _, mark := range t.Marks {
+							marks = append(marks, string(mark))
+						}
+
+						text = append(text, resources.ContentTextInner{
+							Text:  t.Text,
+							Color: t.Color,
+							Link:  t.Link,
+							Marks: marks,
+						})
+					}
+				}
+				section.Text = text
+			}
+
+			content = append(content, section)
 		}
 	}
+
 	data := resources.ArticleData{
 		Id:   article.ID.String(),
 		Type: resources.ArticleType,
@@ -22,8 +56,6 @@ func Article(article models.Article) resources.Article {
 			Title:     article.Title,
 			Status:    string(article.Status),
 			Desc:      *article.Desc,
-			Likes:     int64(article.Likes),
-			Reposts:   int64(article.Reposts),
 			CreatedAt: article.CreatedAt,
 		},
 	}
